Swapped in old Stone textures

--- a/assets/minecraft/textures/block/desktop.ini
+++ b/assets/minecraft/textures/block/desktop.ini
@@ -17,3 +17,28 @@ sand.png=@sand.png,0
 red_sand.png=@red_sand.png,0
 snow.png=@snow.png,0
 soul_sand.png=@soul_sand.png,0
+chiseled_sandstone.png=@chiseled_sandstone.png,0
+chiseled_stone_bricks.png=@chiseled_stone_bricks.png,0
+chiseled_red_sandstone.png=@chiseled_red_sandstone.png,0
+cobblestone.png=@cobblestone.png,0
+cracked_stone_bricks.png=@cracked_stone_bricks.png,0
+cut_sandstone.png=@cut_sandstone.png,0
+cut_red_sandstone.png=@cut_red_sandstone.png,0
+end_stone.png=@end_stone.png,0
+glowstone.png=@glowstone.png,0
+mossy_cobblestone.png=@mossy_cobblestone.png,0
+mossy_stone_bricks.png=@mossy_stone_bricks.png,0
+netherrack.png=@netherrack.png,0
+obsidian.png=@obsidian.png,0
+polished_andesite.png=@polished_andesite.png,0
+polished_diorite.png=@polished_diorite.png,0
+red_sandstone.png=@red_sandstone.png,0
+red_sandstone_top.png=@red_sandstone_top.png,0
+sandstone.png=@sandstone.png,0
+sandstone_top.png=@sandstone_top.png,0
+sandstone_bottom.png=@sandstone_bottom.png,0
+red_sandstone_bottom.png=@red_sandstone_bottom.png,0
+smooth_stone.png=@smooth_stone.png,0
+stone_bricks.png=@stone_bricks.png,0
+stone.png=@stone.png,0
+smooth_stone_slab_side.png=@smooth_stone_slab_side.png,0
