Swapped in old Ore textures

--- a/assets/minecraft/textures/block/desktop.ini
+++ b/assets/minecraft/textures/block/desktop.ini
@@ -42,3 +42,25 @@ smooth_stone.png=@smooth_stone.png,0
 stone_bricks.png=@stone_bricks.png,0
 stone.png=@stone.png,0
 smooth_stone_slab_side.png=@smooth_stone_slab_side.png,0
+chiseled_quartz_block_top.png=@chiseled_quartz_block_top.png,0
+chiseled_quartz_block.png=@chiseled_quartz_block.png,0
+coal_ore.png=@coal_ore.png,0
+coal_block.png=@coal_block.png,0
+diamond_ore.png=@diamond_ore.png,0
+diamond_block.png=@diamond_block.png,0
+emerald_block.png=@emerald_block.png,0
+emerald_ore.png=@emerald_ore.png,0
+gold_ore.png=@gold_ore.png,0
+gold_block.png=@gold_block.png,0
+iron_block.png=@iron_block.png,0
+iron_ore.png=@iron_ore.png,0
+lapis_block.png=@lapis_block.png,0
+lapis_ore.png=@lapis_ore.png,0
+nether_quartz_ore.png=@nether_quartz_ore.png,0
+quartz_block_bottom.png=@quartz_block_bottom.png,0
+quartz_block_top.png=@quartz_block_top.png,0
+quartz_block_side.png=@quartz_block_side.png,0
+quartz_pillar_top.png=@quartz_pillar_top.png,0
+quartz_pillar.png=@quartz_pillar.png,0
+redstone_ore.png=@redstone_ore.png,0
+redstone_block.png=@redstone_block.png,0
