Swapped in old Plant textures

--- a/assets/minecraft/textures/block/desktop.ini
+++ b/assets/minecraft/textures/block/desktop.ini
@@ -64,3 +64,91 @@ quartz_pillar_top.png=@quartz_pillar_top.png,0
 quartz_pillar.png=@quartz_pillar.png,0
 redstone_ore.png=@redstone_ore.png,0
 redstone_block.png=@redstone_block.png,0
+acacia_planks.png=@acacia_planks.png,0
+acacia_log_top.png=@acacia_log_top.png,0
+acacia_log.png=@acacia_log.png,0
+birch_log.png=@birch_log.png,0
+birch_planks.png=@birch_planks.png,0
+birch_log_top.png=@birch_log_top.png,0
+planks_dark_oak.png=@planks_dark_oak.png,0
+dark_oak_log_top.png=@dark_oak_log_top.png,0
+dark_oak_log.png=@dark_oak_log.png,0
+jungle_planks.png=@jungle_planks.png,0
+jungle_log_top.png=@jungle_log_top.png,0
+jungle_log.png=@jungle_log.png,0
+oak_log.png=@oak_log.png,0
+oak_planks.png=@oak_planks.png,0
+oak_log_top.png=@oak_log_top.png,0
+spruce_log_top.png=@spruce_log_top.png,0
+spruce_log.png=@spruce_log.png,0
+spruce_planks.png=@spruce_planks.png,0
+acacia_leaves.png=@acacia_leaves.png,0
+acacia_sapling.png=@acacia_sapling.png,0
+allium.png=@allium.png,0
+attached_melon_stem.png=@attached_melon_stem.png,0
+attached_pumpkin_stem.png=@attached_pumpkin_stem.png,0
+blue_orchid.png=@blue_orchid.png,0
+cactus_side.png=@cactus_side.png,0
+cactus_bottom.png=@cactus_bottom.png,0
+cactus_top.png=@cactus_top.png,0
+carrots_stage_2.png=@carrots_stage_2.png,0
+carrots_stage_3.png=@carrots_stage_3.png,0
+carrots_stage_0.png=@carrots_stage_0.png,0
+carrots_stage_1.png=@carrots_stage_1.png,0
+carrots_stage1.png=@carrots_stage1.png,0
+carrots_stage2.png=@carrots_stage2.png,0
+carrots_stage3.png=@carrots_stage3.png,0
+carrots_stage0.png=@carrots_stage0.png,0
+carved_pumpkin.png=@carved_pumpkin.png,0
+cocoa_stage1.png=@cocoa_stage1.png,0
+cocoa_stage2.png=@cocoa_stage2.png,0
+cocoa_stage0.png=@cocoa_stage0.png,0
+dandelion.png=@dandelion.png,0
+birch_sapling.png=@birch_sapling.png,0
+dark_oak_sapling.png=@dark_oak_sapling.png,0
+dark_oak_leaves.png=@dark_oak_leaves.png,0
+dead_bush.png=@dead_bush.png,0
+fern.png=@fern.png,0
+grass.png=@grass.png,0
+hay_block_side.png=@hay_block_side.png,0
+hay_block_top.png=@hay_block_top.png,0
+jungle_sapling.png=@jungle_sapling.png,0
+jungle_leaves.png=@jungle_leaves.png,0
+large_fern_top.png=@large_fern_top.png,0
+large_fern_bottom.png=@large_fern_bottom.png,0
+melon_top.png=@melon_top.png,0
+melon_stem.png=@melon_stem.png,0
+melon_side.png=@melon_side.png,0
+oak_leaves.png=@oak_leaves.png,0
+oak_sapling.png=@oak_sapling.png,0
+pink_tulip.png=@pink_tulip.png,0
+red_tulip.png=@red_tulip.png,0
+orange_tulip.png=@orange_tulip.png,0
+white_tulip.png=@white_tulip.png,0
+oxeye_daisy.png=@oxeye_daisy.png,0
+poppy.png=@poppy.png,0
+potatoes_stage1.png=@potatoes_stage1.png,0
+potatoes_stage2.png=@potatoes_stage2.png,0
+potatoes_stage3.png=@potatoes_stage3.png,0
+potatoes_stage0.png=@potatoes_stage0.png,0
+pumpkin_side.png=@pumpkin_side.png,0
+pumpkin_stem.png=@pumpkin_stem.png,0
+pumpkin_top.png=@pumpkin_top.png,0
+rose_bush_bottom.png=@rose_bush_bottom.png,0
+rose_bush_top.png=@rose_bush_top.png,0
+spruce_sapling.png=@spruce_sapling.png,0
+spruce_leaves.png=@spruce_leaves.png,0
+sunflower_bottom.png=@sunflower_bottom.png,0
+sunflower_back.png=@sunflower_back.png,0
+sunflower_front.png=@sunflower_front.png,0
+sunflower_top.png=@sunflower_top.png,0
+tall_grass_bottom.png=@tall_grass_bottom.png,0
+tall_grass_top.png=@tall_grass_top.png,0
+vine.png=@vine.png,0
+wheat_stage1.png=@wheat_stage1.png,0
+wheat_stage2.png=@wheat_stage2.png,0
+wheat_stage3.png=@wheat_stage3.png,0
+wheat_stage4.png=@wheat_stage4.png,0
+wheat_stage5.png=@wheat_stage5.png,0
+wheat_stage6.png=@wheat_stage6.png,0
+wheat_stage0.png=@wheat_stage0.png,0
