Swapped in old Fungus textures

--- a/assets/minecraft/textures/block/desktop.ini
+++ b/assets/minecraft/textures/block/desktop.ini
@@ -152,3 +152,11 @@ wheat_stage4.png=@wheat_stage4.png,0
 wheat_stage5.png=@wheat_stage5.png,0
 wheat_stage6.png=@wheat_stage6.png,0
 wheat_stage0.png=@wheat_stage0.png,0
+brown_mushroom.png=@brown_mushroom.png,0
+mushroom_block_inside.png=@mushroom_block_inside.png,0
+mushroom_stem.png=@mushroom_stem.png,0
+red_mushroom.png=@red_mushroom.png,0
+red_mushroom_block.png=@red_mushroom_block.png,0
+nether_wart_stage1.png=@nether_wart_stage1.png,0
+nether_wart_stage2.png=@nether_wart_stage2.png,0
+nether_wart_stage0.png=@nether_wart_stage0.png,0
