--- a/assets/minecraft/textures/block/desktop.ini
+++ b/assets/minecraft/textures/block/desktop.ini
@@ -160,3 +160,56 @@ red_mushroom_block.png=@red_mushroom_block.png,0
 nether_wart_stage1.png=@nether_wart_stage1.png,0
 nether_wart_stage2.png=@nether_wart_stage2.png,0
 nether_wart_stage0.png=@nether_wart_stage0.png,0
+light_blue_wool.png=@light_blue_wool.png,0
+light_gray_wool.png=@light_gray_wool.png,0
+lime_wool.png=@lime_wool.png,0
+magenta_wool.png=@magenta_wool.png,0
+orange_wool.png=@orange_wool.png,0
+pink_wool.png=@pink_wool.png,0
+purple_wool.png=@purple_wool.png,0
+red_wool.png=@red_wool.png,0
+white_wool.png=@white_wool.png,0
+yellow_wool.png=@yellow_wool.png,0
+blue_wool.png=@blue_wool.png,0
+brown_wool.png=@brown_wool.png,0
+cyan_wool.png=@cyan_wool.png,0
+gray_wool.png=@gray_wool.png,0
+green_wool.png=@green_wool.png,0
+light_blue_stained_glass.png=@light_blue_stained_glass.png,0
+light_gray_stained_glass.png=@light_gray_stained_glass.png,0
+lime_stained_glass.png=@lime_stained_glass.png,0
+magenta_stained_glass.png=@magenta_stained_glass.png,0
+orange_stained_glass.png=@orange_stained_glass.png,0
+pink_stained_glass.png=@pink_stained_glass.png,0
+purple_stained_glass.png=@purple_stained_glass.png,0
+red_stained_glass.png=@red_stained_glass.png,0
+white_stained_glass.png=@white_stained_glass.png,0
+yellow_stained_glass.png=@yellow_stained_glass.png,0
+black_stained_glass.png=@black_stained_glass.png,0
+blue_stained_glass.png=@blue_stained_glass.png,0
+brown_stained_glass.png=@brown_stained_glass.png,0
+cyan_stained_glass.png=@cyan_stained_glass.png,0
+gray_stained_glass.png=@gray_stained_glass.png,0
+green_stained_glass.png=@green_stained_glass.png,0
+glass_pane_top.png=@glass_pane_top.png,0
+glass.png=@glass.png,0
+light_blue_stained_glass_pane_top.png=@light_blue_stained_glass_pane_top.png,0
+light_gray_stained_glass_pane_top.png=@light_gray_stained_glass_pane_top.png,0
+lime_stained_glass_pane_top.png=@lime_stained_glass_pane_top.png,0
+magenta_stained_glass_pane_top.png=@magenta_stained_glass_pane_top.png,0
+orange_stained_glass_pane_top.png=@orange_stained_glass_pane_top.png,0
+pink_stained_glass_pane_top.png=@pink_stained_glass_pane_top.png,0
+purple_stained_glass_pane_top.png=@purple_stained_glass_pane_top.png,0
+red_stained_glass_pane_top.png=@red_stained_glass_pane_top.png,0
+white_stained_glass_pane_top.png=@white_stained_glass_pane_top.png,0
+yellow_stained_glass_pane_top.png=@yellow_stained_glass_pane_top.png,0
+black_stained_glass_pane_top.png=@black_stained_glass_pane_top.png,0
+blue_stained_glass_pane_top.png=@blue_stained_glass_pane_top.png,0
+brown_stained_glass_pane_top.png=@brown_stained_glass_pane_top.png,0
+cyan_stained_glass_pane_top.png=@cyan_stained_glass_pane_top.png,0
+gray_stained_glass_pane_top.png=@gray_stained_glass_pane_top.png,0
+green_stained_glass_pane_top.png=@green_stained_glass_pane_top.png,0
+prismarine_bricks.png=@prismarine_bricks.png,0
+dark_prismarine.png=@dark_prismarine.png,0
+prismarine.png=@prismarine.png,0
+prismarine.png.mcmeta=@prismarine.png.mcmeta,0
