Swapped in old Redstone block textures

--- a/assets/minecraft/textures/block/desktop.ini
+++ b/assets/minecraft/textures/block/desktop.ini
@@ -213,3 +213,18 @@ prismarine_bricks.png=@prismarine_bricks.png,0
 dark_prismarine.png=@dark_prismarine.png,0
 prismarine.png=@prismarine.png,0
 prismarine.png.mcmeta=@prismarine.png.mcmeta,0
+spruce_door_top.png=@spruce_door_top.png,0
+spruce_door_bottom.png=@spruce_door_bottom.png,0
+jungle_door_top.png=@jungle_door_top.png,0
+jungle_door_bottom.png=@jungle_door_bottom.png,0
+birch_door_bottom.png=@birch_door_bottom.png,0
+birch_door_top.png=@birch_door_top.png,0
+acacia_door_bottom.png=@acacia_door_bottom.png,0
+acacia_door_top.png=@acacia_door_top.png,0
+dark_oak_door_top.png=@dark_oak_door_top.png,0
+dark_oak_door_bottom.png=@dark_oak_door_bottom.png,0
+iron_door_top.png=@iron_door_top.png,0
+iron_door_bottom.png=@iron_door_bottom.png,0
+oak_door_bottom.png=@oak_door_bottom.png,0
+oak_door_top.png=@oak_door_top.png,0
+oak_trapdoor.png=@oak_trapdoor.png,0
